--- a/interfaces/UseFormOptions.html
+++ b/interfaces/UseFormOptions.html
@@ -30,7 +30,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">UseFormOptions</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/47eb07f/src/types.ts#L8">types.ts:8</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/50a953d/src/types.ts#L8">types.ts:8</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -52,7 +52,7 @@
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>auto<wbr/>Validate<wbr/>Behavior</span><a href="#autoValidateBehavior" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" id="icon-anchor-a"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5" id="icon-anchor-b"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5" id="icon-anchor-c"></path></svg></a></h3>
 <div class="tsd-signature">auto<wbr/>Validate<wbr/>Behavior<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">&quot;never&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;onBlur&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;onChange&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;immediate&quot;</span></div>
 <div class="tsd-comment tsd-typography"><p>Decide when to auto validate the form. Defaults to <code>onChange</code>.</p>
-<p><code>immediate</code> - Show validation errors as soon as the hook mounts.</p>
+<p><code>immediate</code> - Show validation errors as soon as the hook mounts, as well as onChange and onBlur.</p>
 <p><code>onChange</code> - Show validations after the user has changed the input.</p>
 <p><code>onBlur</code> - Show validations after the user has blurred the input.</p>
 <p><code>never</code> - Show validations after the user has submitted the form only, or on manual trigger.</p>
@@ -60,7 +60,7 @@
 <h3>See</h3><p><a href="UseFormReturn.html#validate">validate</a> for manual validation trigger</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/47eb07f/src/types.ts#L44">types.ts:44</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/50a953d/src/types.ts#L44">types.ts:44</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="errorMessages" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>error<wbr/>Messages</span><a href="#errorMessages" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">error<wbr/>Messages<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><a href="ErrorStrings.html" class="tsd-signature-type" data-tsd-kind="Interface">ErrorStrings</a><span class="tsd-signature-symbol">&gt;</span></div>
@@ -76,7 +76,7 @@
 </ul>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/47eb07f/src/types.ts#L29">types.ts:29</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/50a953d/src/types.ts#L29">types.ts:29</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="initialState" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>initial<wbr/>State</span><a href="#initialState" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">initial<wbr/>State<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">&gt;</span></div>
@@ -84,7 +84,7 @@
 Any missing field will be empty.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/47eb07f/src/types.ts#L13">types.ts:13</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/50a953d/src/types.ts#L13">types.ts:13</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface"><a id="onSubmit" class="tsd-anchor"></a>
@@ -103,7 +103,7 @@ Any missing field will be empty.</p>
 <h5>e: <span class="tsd-signature-type">FormEvent</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">HTMLFormElement</span><span class="tsd-signature-symbol">&gt;</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/47eb07f/src/types.ts#L18">types.ts:18</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/50a953d/src/types.ts#L18">types.ts:18</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
